--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -285,7 +285,7 @@ def merge(arrays: list[list[Number]]) \
 			O(n\log{}{n})
 		\end{equation}
 	
-		Временная сложность
+		Временная сложность:
 		\begin{multline}
 			T^{sort}(n)=2T^{sort}\left(\frac{n}{2}\right)+T^{merge}(n)=\\=T^{sort}\left(\frac{n}{2}\right)+\Theta(\log^2{}{n})
 		\end{multline}
@@ -385,6 +385,9 @@ def parallel_merge_sort(arr: list[Number]) -> list[Number]:
 			bookcolour=black!20!brown
 			]
 		\end{tikzpicture}
+		
+		\vspace*{1cm}
+		Код из презентации: \href{https://github.com/ValeryVerkhoturov/merge-sort-presentation}{github.com/ValeryVerkhoturov/merge-sort-presentation}
 	
 	\end{frame}
 
