--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -287,7 +287,7 @@ def merge(arrays: list[list[Number]]) \
 	
 		Временная сложность:
 		\begin{multline}
-			T^{sort}(n)=2T^{sort}\left(\frac{n}{2}\right)+T^{merge}(n)=\\=T^{sort}\left(\frac{n}{2}\right)+\Theta(\log^2{}{n})
+			T^{sort}(n)=2T^{sort}\left(\frac{n}{2}\right)+T^{merge}(n)=\\=2T^{sort}\left(\frac{n}{2}\right)+\Theta(\log^2{}{n})
 		\end{multline}
 	\end{frame}
 	
